[gd_scene load_steps=11 format=3 uid="uid://bir852iq3v7sq"]

[ext_resource type="Script" path="res://MainScenes/Battle.gd" id="1_wgiy2"]
[ext_resource type="PackedScene" uid="uid://duelxmv41oxw4" path="res://Agents&Tools/MapPicker/MapPicker.tscn" id="2_efjwm"]
[ext_resource type="AudioStream" uid="uid://dkcn1wtkdrxet" path="res://BattleMaps/Caves/DarkCaveAmbiente.wav" id="2_qi30o"]
[ext_resource type="PackedScene" uid="uid://jjnqrs3wk47o" path="res://Agents&Tools/NavigationGrid/NavigationGrid.tscn" id="3_5pxlv"]
[ext_resource type="PackedScene" uid="uid://ctvbsbyvjp67g" path="res://Agents&Tools/NavigationGrid/path_indicator.tscn" id="4_drxas"]
[ext_resource type="PackedScene" uid="uid://cm2c1w55mxnuw" path="res://Agents&Tools/UnitFactory/UnitFactory.tscn" id="5_t8cve"]
[ext_resource type="Script" path="res://MainScenes/Camera2D.gd" id="6_msmka"]
[ext_resource type="Script" path="res://Agents&Tools/Timeline/Timeline.gd" id="6_t15fm"]
[ext_resource type="PackedScene" uid="uid://c3tc28a0qxxdy" path="res://Graphics & UI/Battle_UI/battle_ui.tscn" id="9_y0wmg"]
[ext_resource type="PackedScene" uid="uid://cwvsodv8h8wy" path="res://Graphics & UI/GamespeedButton/gamespeed_button.tscn" id="10_lrl5f"]

[node name="Battle" type="Node"]
script = ExtResource("1_wgiy2")
music = ExtResource("2_qi30o")

[node name="Map" type="Node" parent="."]

[node name="Agents" type="Node" parent="."]

[node name="NavigationGrid" parent="Agents" instance=ExtResource("3_5pxlv")]

[node name="PathIndicator" parent="Agents/NavigationGrid" instance=ExtResource("4_drxas")]

[node name="UnitFactory" parent="Agents" instance=ExtResource("5_t8cve")]

[node name="MapPicker" parent="Agents" instance=ExtResource("2_efjwm")]

[node name="Timeline" type="Node" parent="Agents"]
script = ExtResource("6_t15fm")

[node name="Units" type="Node" parent="."]

[node name="Enemy" type="Node" parent="Units"]

[node name="Player" type="Node" parent="Units"]

[node name="Neutral" type="Node" parent="Units"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)
script = ExtResource("6_msmka")

[node name="Battle_UI" parent="." instance=ExtResource("9_y0wmg")]

[node name="GamespeedSlider" parent="Battle_UI" instance=ExtResource("10_lrl5f")]
offset_left = 9.0
offset_top = 8.0
offset_right = 306.0
offset_bottom = 24.0
value = 1.0

[connection signal="value_changed" from="Battle_UI/GamespeedSlider" to="." method="_on_gamespeed_slider_value_changed"]
